--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,3 +21,10 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+//.center{
+//
+//  margin: 0 auto;
+//  display: block;
+//}
+
+
