--- a/www/templates/category.html
+++ b/www/templates/category.html
@@ -1,20 +1,29 @@
 <ion-view view-title="Category">
-  <ion-content>
-    <img src="/img/logo.png">
+  <ion-content scroll="false">
+    <img src="/img/logo.png" class="center" align="middle">
 
 
 
-    <div class="card row" >
-      <div class="col" ng-repeat="item in category" >
-        <div class="clearfix" ng-if="$index % 2 == 0"></div>
-        <button class="button button-outline button-positive"
-                ui-sref="app.categoryList({'categoryId':item.id,'categoryTitle':item.name})">
-         {{item.name}}
+    <div class="card" >
+      <!--<div class="col" ng-repeat="item in category" >-->
+        <!--<div class="clearfix" ng-if="$index % 2 == 0"></div>-->
+        <!--<button class="button button-outline button-positive"-->
+                <!--ui-sref="app.categoryList({'categoryId':item.id,'categoryTitle':item.name})">-->
+         <!--{{item.name}}-->
 
-               </button>
+               <!--</button>-->
 
 
-      </div>
+      <!--</div>-->
+      <div ng-repeat="category in categories" class="row">
+        <div class="col" ng-repeat="button in category">
+          <button class="button button-outline button-block button-positive "
+                  ui-sref="app.categoryList({'categoryId':button.id,'categoryTitle':button.name})">
+                  {{button.name}}{{button.id}}
+                  </button>
+
+        </div>
+    </div>
 
 
     </div>
