Create new project

--- a/www/templates/category.html
+++ b/www/templates/category.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Category">
   <ion-content scroll="false">
-    <img src="/img/logo.png" class="center" align="middle">
+    <img id="categoryLogo" src="./img/logo.png" class="center" align="middle">
 
 
 
