Create new project

--- a/www/templates/categoryList.html
+++ b/www/templates/categoryList.html
@@ -1,6 +1,21 @@
 <ion-view view-title="{{title}}">
   <ion-content>
-    List here
+
+    <div>
+      <img id="categoryLogo" src="./img/logo.png" class="center" align="middle">
+
+      <div class="card" ng-repeat="item in articlelist">
+  {{item.Title}}
+        <img ng-src="{{item.PortraitAvatar || item.LandscapeAvatar}}">
+        {{item.PortraitAvatar}}
+
+      </div>
+
+    </div>
+    <ion-infinite-scroll
+      on-infinite="loadMore()"
+      distance="1%">
+    </ion-infinite-scroll>
 
   </ion-content>
 </ion-view>
