Create new project

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,3 +5,14 @@ body .center {
 body #categoryLogo {
   width: 100%;
   padding: 10px; }
+
+body #category-list .feed.card {
+  padding: 10px; }
+
+body #category-list .thumbnail-image {
+  width: 100%;
+  height: 200px;
+  background-size: cover; }
+
+body #feed-view img {
+  width: 100%; }
