--- a/www/templates/category.html
+++ b/www/templates/category.html
@@ -17,7 +17,7 @@
       <!--</div>-->
       <div ng-repeat="category in categories" class="row">
         <div class="col" ng-repeat="button in category">
-          <button class="button button-outline button-block button-positive "
+          <button class="padding button button-outline button-block button-positive "
                   ui-sref="app.categoryList({'categoryId':button.id,'categoryTitle':button.name})">
                   {{button.name}}{{button.id}}
                   </button>
