--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,4 +8,22 @@ body{
     width: 100%;
     padding:10px;
   }
+  #category-list{
+    .feed{
+      &.card{
+        padding: 10px;
+      }
+    }
+    .thumbnail-image{
+      width: 100%;
+      height: 200px;
+      background-size: cover;    }
+
+  }
+  #feed-view{
+    img{
+      width: 100%;
+    }
+
+  }
 }
