--- a/www/templates/categoryList.html
+++ b/www/templates/categoryList.html
@@ -3,7 +3,7 @@
     <div>
       <img id="categoryLogo" src="./img/logo.png" class="center" align="middle">
       <div class="card feed" ng-repeat="item in articlelist"
-           ui-sref="app.feedView({'feedId':item.ContentID})"
+           ui-sref="app.feedView({'feedIndex':$index})"
       >
         <h2>{{item.Title}}</h2>
         <div
