--- a/www/templates/viewPager.html
+++ b/www/templates/viewPager.html
@@ -1,31 +1,14 @@
-<ion-view view-title="Category">
-  <ion-content scroll="false">
-    <img id="categoryLogo" src="./img/logo.png" class="center" align="middle">
+<ion-view view-title="Feed">
+    <ion-content scroll="false" >
 
+        <!--                                                           ng-if="($index >=(indexOfSelectedFeed -2)) && ($index <= (indexOfSelectedFeed +2))"-->
+        <ion-slide-box on-slide-changed="slideHasChanged($index)">
 
+            <ion-slide ng-repeat="feed in articlelist" >
+                <feed-view selected-feed ="feed"></feed-view>
+            </ion-slide>
+            
+        </ion-slide-box>
 
-    <div class="card" >
-      <!--<div class="col" ng-repeat="item in category" >-->
-        <!--<div class="clearfix" ng-if="$index % 2 == 0"></div>-->
-        <!--<button class="button button-outline button-positive"-->
-                <!--ui-sref="app.categoryList({'categoryId':item.id,'categoryTitle':item.name})">-->
-         <!--{{item.name}}-->
-
-               <!--</button>-->
-
-
-      <!--</div>-->
-      <div ng-repeat="category in categories" class="row">
-        <div class="col" ng-repeat="button in category">
-          <button class="padding button button-outline button-block button-positive "
-                  ui-sref="app.categoryList({'categoryId':button.id,'categoryTitle':button.name})">
-                  {{button.name}}{{button.id}}
-                  </button>
-
-        </div>
-    </div>
-
-
-    </div>
-  </ion-content>
+    </ion-content>
 </ion-view>
