Create new project

--- a/www/templates/category.html
+++ b/www/templates/category.html
@@ -19,7 +19,7 @@
         <div class="col" ng-repeat="button in category">
           <button class="padding button button-outline button-block button-positive "
                   ui-sref="app.categoryList({'categoryId':button.id,'categoryTitle':button.name})">
-                  {{button.name}}{{button.id}}
+                  {{button.name}}
                   </button>
 
         </div>
