--- a/www/templates/FeedView.html
+++ b/www/templates/FeedView.html
@@ -1,6 +1,6 @@
 
-    <ion-content class="padding" >
-        <h1>{{selectedFeed.Title}}</h1>
-        <p ng-bind-html="selectedFeed.Body"></p>
+    <ion-content class="padding" id="feed-view">
+        <h1>{{::selectedFeed.Title}}</h1>
+        <p ng-bind-html="::selectedFeed.Body"></p>
     </ion-content>
 
