--- a/www/templates/viewPager.html
+++ b/www/templates/viewPager.html
@@ -1,14 +1,14 @@
 <ion-view view-title="Feed">
     <ion-content scroll="false" >
+      <ion-slides  options="options" slider="data.slider">
+        <ion-slide-page ng-repeat="feed in articlelist" >
+          <feed-view selected-feed ="::feed" ng-if="$index > (model.activeIndex-2) && $index < (model.activeIndex+2)" ></feed-view>
+        </ion-slide-page>
 
-        <!--                                                           ng-if="($index >=(indexOfSelectedFeed -2)) && ($index <= (indexOfSelectedFeed +2))"-->
-        <ion-slide-box on-slide-changed="slideHasChanged($index)">
+      </ion-slides>
 
-            <ion-slide ng-repeat="feed in articlelist" >
-                <feed-view selected-feed ="feed"></feed-view>
-            </ion-slide>
-            
-        </ion-slide-box>
+
+
 
     </ion-content>
 </ion-view>
