--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,7 +25,7 @@ body{
   }
   #feed-view{
     background-color: $white-background-color;
-
+    padding-bottom: 10px;
     font-size: 23px;
     img{
       width: 100%;
