--- a/www/templates/FeedView.html
+++ b/www/templates/FeedView.html
@@ -2,5 +2,6 @@
     <ion-content class="padding" id="feed-view">
         <h1>{{::selectedFeed.Title}}</h1>
         <p ng-bind-html="::selectedFeed.Body"></p>
+        <a  on-touch="openSource()">Original soruce</a>
     </ion-content>
 
