--- a/www/templates/viewPager.html
+++ b/www/templates/viewPager.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Feed">
     <ion-content scroll="false" >
-      <ion-slides  options="options" slider="data.slider">
-        <ion-slide-page ng-repeat="feed in articlelist" >
-          <feed-view selected-feed ="::feed" ng-if="$index > (model.activeIndex-2) && $index < (model.activeIndex+2)" ></feed-view>
-        </ion-slide-page>
+        <ion-slides  options="options" slider="data.slider">
+            <ion-slide-page ng-repeat="feed in articlelist" >
+                <feed-view selected-feed ="::feed" ng-if="$index > (model.activeIndex - 2) && $index < (model.activeIndex + 2)" ></feed-view>
+            </ion-slide-page>
 
-      </ion-slides>
+        </ion-slides>
 
 
 
