--- a/www/templates/category.html
+++ b/www/templates/category.html
@@ -5,7 +5,7 @@
 
 
         <div class="card" >
-
+<div class="container-fluid">
             <div ng-repeat="category in categories" class="row">
                 <div class="col" ng-repeat="button in category">
                     <button class="padding button button-outline button-block button-positive "
@@ -15,6 +15,7 @@
 
                 </div>
             </div>
+</div>
 
 
         </div>
