--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 $white-background-color:#efefef;
-$card-height:400px;
+$card-height:300px;
 body{
   //Override bootstrap
   .row{
@@ -23,13 +23,24 @@ body{
         display: flex;
         height: $card-height;
         flex-direction: column;
+        .title{
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 2; /* number of lines to show */
+          //line-height: 3;        /* fallback */
+          //max-height: 3*2;
+        }
+
       }
     }
     .thumbnail-image{
       width: 100%;
       flex-shrink: inherit;
       flex: 1;
-      background-size: cover;
+      background-size: contain;
+      background-repeat: no-repeat;
 
     }
 
