--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,13 +14,21 @@ body #category-list {
   body #category-list .feed.card {
     padding: 10px;
     display: flex;
-    height: 400px;
+    height: 300px;
     flex-direction: column; }
+    body #category-list .feed.card .title {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      /* number of lines to show */ }
   body #category-list .thumbnail-image {
     width: 100%;
     flex-shrink: inherit;
     flex: 1;
-    background-size: cover; }
+    background-size: contain;
+    background-repeat: no-repeat; }
 
 body #feed-view {
   background-color: #efefef;
