--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,11 +36,12 @@ body{
       }
     }
     .thumbnail-image{
-      width: 100%;
-      flex-shrink: inherit;
-      flex: 1;
-      background-size: contain;
-      background-repeat: no-repeat;
+
+	      width: 100%;
+    flex-shrink: inherit;
+    flex: 1;
+    background-size: contain;
+    background-size: 100% auto;
 
     }
 
