--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,66 +1,76 @@
 $white-background-color:#efefef;
 $card-height:300px;
 body{
-  //Override bootstrap
-  .row{
-    width: calc(100% + 30px);
-  }
-  .center{
+    //Override bootstrap
+    .row{
+        width: calc(100% + 30px);
+    }
+    .center{
 
-    margin: 0 auto;
-    display: block;
-  }
-  #categoryLogo{
-    width: 100%;
-    padding:10px;
-  }
-  #category-list{
-    background-color: $white-background-color;
+        margin: 0 auto;
+        display: block;
+    }
+    #categoryLogo{
+        width: 100%;
+        padding:10px;
+    }
+    #category{
+        button.category-button{
 
-    .feed{
-      &.card{
-        padding: 10px;
-        display: flex;
-        height: $card-height;
-        flex-direction: column;
-        .title{
-          overflow: hidden;
-          text-overflow: ellipsis;
-          display: -webkit-box;
-          -webkit-box-orient: vertical;
-          -webkit-line-clamp: 2; /* number of lines to show */
-          //line-height: 3;        /* fallback */
-          //max-height: 3*2;
+            padding: 0 !important;
+
+
+
+        }
+    }
+    #category-list{
+        background-color: $white-background-color;
+
+        .feed{
+            &.card{
+                padding: 10px;
+                display: flex;
+                height: $card-height;
+                flex-direction: column;
+                width: calc(100% - 20px);
+                .title{
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 2;
+                    white-space: pre-line;
+
+                }
+
+            }
+        }
+        .thumbnail-image{
+
+            width: 100%;
+            flex-shrink: inherit;
+            flex: 1;
+            background-size: contain;
+            background-size: 100% auto;
+
         }
 
-      }
     }
-    .thumbnail-image{
+    #feed-view{
+        background-color: $white-background-color;
+        font-size: 20px;
 
-	      width: 100%;
-    flex-shrink: inherit;
-    flex: 1;
-    background-size: contain;
-    background-size: 100% auto;
+        img{
+            width: 100%;
+        }
+        p.body-text{
+            text-indent: 30px;
+        }
+        .scroll{
+            padding-bottom: 50px;
 
-    }
-
-  }
-  #feed-view{
-    background-color: $white-background-color;
-    font-size: 20px;
-
-    img{
-      width: 100%;
-    }
-    p.body-text{
-        text-indent: 30px;
-    }
-    .scroll{
-      padding-bottom: 50px;
+        }
 
     }
-
-  }
 
 }
