--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,7 +1,7 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-positive">
-      <ion-nav-back-button>
+    <ion-nav-bar class="bar-positive" align-title="left">
+      <ion-nav-back-button class="no-text">
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
@@ -9,6 +9,12 @@
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
+      
+    
+
+      
+      
+      
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
