Create new project

--- a/www/templates/categoryList.html
+++ b/www/templates/categoryList.html
@@ -12,8 +12,8 @@
                 >
 
             </div>
-            <div class="list ">
-                <a class="card feed item" ng-repeat="item in articlelist"
+            <div class="list">
+                <a class="card feed" ng-repeat="item in articlelist"
                    ui-sref="app.feedView({'feedIndex':$index})">
                     <h1 class="title">{{::item.Title}}</h1>
                     <div
